--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .navbar {
-    background-color: #def1fc;
+    background-color: #eee;
     color: #fff;
 }
 
@@ -232,6 +232,8 @@ a {
     -webkit-transition: border-color 0.3s;
     -moz-transition: border-color 0.3s;
     transition: border-color 0.3s;
+    background-image: url(../img/right.png) ;
+
   }
   .cd-timeline-navigation a::after {
     /* arrow icon */
@@ -459,10 +461,14 @@ a {
   }
 
 
+  .contact-section {
+    padding-bottom: 30px;
+  }
 
-  .contact-form {
-    margin-top: 15px;
-    margin-bottom: 15px;
+  .row .col-md-3 {
+    margin-bottom: 20px;
+    margin-top: 20px;
+    font-size: 1.5em;
   }
   
   .contact-form .textarea {
