--- a/assets/css/scrolling-nav.css
+++ b/assets/css/scrolling-nav.css
@@ -46,15 +46,16 @@ of those sections to manage the look and feel of the site. */
 }
 
 .services-section {
-    height: 100%;
+    min-height: 100%;
     padding-top: 150px;
     text-align: center;
     background: #fff;
 }
 
 .contact-section {
-    height: 100%;
+    min-height: 100%;
     padding-top: 50px;
+    padding-bottom: 50px
     text-align: center;
     background: #eee;
 }
